--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   build_runner: ^2.1.10
   flutter_lints: ^1.0.0
   flutter_native_splash: ^2.1.1
+  json_serializable: ^6.1.4
   http:
   #generating icons
   flutter_launcher_icons: "^0.10.0"
