--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   get: ^4.6.5
   dartz: ^0.10.0
   shared_preferences: ^2.0.8
+  url_launcher: ^6.1.2
 
   #Local auth
   local_auth: ^1.1.6
