--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/qra_logo.jpg"
+  image_path: "assets/images/app_icon2.png"
 
 flutter_native_splash:
   android: true
