--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   #UI
   slide_to_confirm: ^1.1.0
 
+  #pdf
+  pdf: 3.6.4
+  printing: ^5.6.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
