--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   freezed: ^0.14.1+1
   get: ^4.6.5
   dartz: ^0.10.0
+  intl:
   shared_preferences: ^2.0.8
   url_launcher: ^6.1.2
 
